[FE-179] Fix z-index bug

--- a/js/apps/system/_admin/aardvark/APP/react/src/views/g6graphs/components/Drawer/styles.css
+++ b/js/apps/system/_admin/aardvark/APP/react/src/views/g6graphs/components/Drawer/styles.css
@@ -2,7 +2,7 @@
     width: 400px;
     background-color: #3A4045;
     position: absolute;
-    z-index: 999999;
+    z-index: 1;
     overflow-y: scroll;
     text-align: left;
   
@@ -19,10 +19,10 @@
   
   .side-drawer.left.open {
     left: 0;
-    z-index: 999999;
+    z-index: 1;
   }
   .side-drawer.right.open {
     right: 0;
-    z-index: 999999;
+    z-index: 1;
   }
   
